# Autocomplete

./: .gitignore  Autocomplete.h  CMakeLists.txt  README.md  TST.h  TST_P.h  Top_K.h  Trie.h  main.cpp
Data/: dictcalls_s.txt  dictwords_lc.txt  dictwords_sc.txt
Lib/: Autocomplete.h  TST.h  TST_P.h  Top_K.h  Trie.h
Test/: Trie_Test.cpp  catch_conf.cpp
